nginx/ingress/nginx-ingress-nginx-fallback.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-nginx-fallback
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc-fallback
            port:
              number: 8080
