nginx/ingress/nginx-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-nginx
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - host: nginx-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 8080
